<resources>
    <string name="app_name">Trakit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password_not_match">Password does not match</string>

    <!-- top nav bar -->
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- bottom nav bar -->
    <string name="home">Home</string>
    <string name="chart">Chart</string>
    <string name="add">Create</string>
    <string name="trans">Trans</string>
    <string name="cat">Cat</string>


    <string name="more">More</string>
    <string name="create_new_cat">New</string>

    <!-- title for fragments -->
    <string name="catList_top_nav_bar">Categories</string>
    <string name="home_top_navbar">Home</string>
    <string name="chart_top_navbar">Charts</string>
    <string name="add_top_navbar">New transaction</string>
    <string name="trans_top_navbar">Transactions</string>

    <!-- title for Profile activity -->
    <string name="profile_top_navbar">Profile</string>
    <string name="change_profile_pic">change</string>
    <string name="email">Email</string>
    <string name="username">Username</string>

    <!-- Category-->
    <string name="tv_create_cat">Create Category</string>
    <string name="btnSave">save</string>
    <string name="btnCancel">cancel</string>
    <string name="btnDelete">delete</string>

    <!--Transaction-->
    <string name="view_trans">Viewing</string>
    <string name="update_trans">Update</string>
    <string name="view_amt">Amount</string>
    <string name="btnUpdate">update</string>
    <string name="btnConfirm">confirm</string>
    <string name="btnCreate">Add</string>

    <string-array name="month_year_values">
        <item>January 2025</item>
        <item>February 2025</item>
        <item>March 2025</item>
        <item>April 2025</item>
    </string-array>

    <!--Expense/Income Radio Button-->
    <string name="expense">Expense</string>
    <string name="income">Income</string>

    <!-- Auth Activity -->
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Login</string>
    <string name="noAcc">Don\'t have an account?</string>
    <string name="goToSignup">Sign up</string>
    <string name="haveAcc">Have an account?</string>
    <string name="goToLogin">Login</string>

    <!--Budget-->
    <string name="create_budget_top_navbar">Create Budget</string>
    <string name="update_budget_top_navbar">Update Budget</string>
</resources>