<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Active item -->
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_foreground"
        android:enabled="true"
        android:state_pressed="true"
        android:state_checked="true"/>
    <item
        android:id="@+id/chart"
        android:title="@string/chart"
        android:icon="@drawable/chart"
        android:enabled="true"/>
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/add"
        android:enabled="true"/>
    <item
        android:id="@+id/trans"
        android:title="@string/trans"
        android:icon="@drawable/transaction"
        android:enabled="true"/>
    <item
        android:id="@+id/category"
        android:title="@string/cat"
        android:icon="@drawable/category"
        android:enabled="true"/>
</menu>