<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base"
        app:navigationIcon="@drawable/arrow_back"
        app:navigationIconTint="@color/white"
        app:title="@string/profile_top_navbar"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleShape"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Change Button -->
    <Button
        android:id="@+id/btnChangeProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/base"
        android:text="@string/change_profile_pic"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email Section -->
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnChangeProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etProfileEmail"
        app:layout_constraintBaseline_toBaselineOf="@id/etProfileEmail"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp" />

    <!-- Username Section -->
    <EditText
        android:id="@+id/etProfileEmail"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEmail"
        app:layout_constraintTop_toBottomOf="@id/btnChangeProfilePic" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/etProfileUsername"
        app:layout_constraintEnd_toStartOf="@id/etProfileUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProfileEmail" />

    <!-- Update Button -->

    <EditText
        android:id="@+id/etProfileUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvUsername"
        app:layout_constraintTop_toBottomOf="@id/etProfileEmail" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/base"
        android:text="@string/btnSave"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etProfileUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logout Button -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/base"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
