<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".budgetfragments.UpdateBudgetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back"
            app:navigationIconTint="@color/white"
            app:title="@string/update_budget_top_navbar"
            app:titleTextColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar">

            <TextView
                android:id="@+id/tvCreateAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_amt"
                android:textColor="@color/base"
                android:textStyle="bold" />

            <!-- Horizontal Layout for Amount and Currency -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etUpdateAmount"
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext_transparent"
                    android:enabled="true"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="8dp"
                    android:textColor="@color/base"
                    android:textSize="32dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCreateCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:text="SGD"
                    android:textColor="@color/base"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvUpdateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Name"
                android:textColor="@color/base"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_transparent"
                android:enabled="true"
                android:gravity="top"
                android:hint="Japan Trip"
                android:inputType="text"
                android:maxLines="3"
                android:minLines="3"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/base" />

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Start Date"
                android:textColor="@color/base"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateStartDate"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_transparent"
                android:hint="Select Date"
                android:inputType="date"
                android:paddingHorizontal="8dp" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="End Date"
                android:textColor="@color/base"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUpdateEndDate"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext_transparent"
                android:hint="Select Date"
                android:inputType="date"
                android:paddingHorizontal="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdateDelete"
                    android:layout_width="115dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="100dp"
                    android:backgroundTint="@color/delete"
                    android:text="@string/btnDelete"
                    android:textColor="@color/base"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnUpdateUpdate"
                    android:layout_width="115dp"
                    android:layout_height="48dp"
                    android:backgroundTint="#3FFFAF"
                    android:text="@string/btnUpdate"
                    android:textColor="@color/base"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>